<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/graph_hrm"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:visibility="gone" >
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center|center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/heart_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/image_hrm_measurement_heart"
                android:padding="10dp"
                android:src="@drawable/heart" />

            <TextView
                android:id="@+id/hrm_heartrate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/main_bg_color"
                android:textSize="@dimen/hrm_measurement_heart_rate_textsize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hrm_heartrate_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="start|bottom"
                android:padding="10dp"
                android:text="@string/hrm_data_unit"
                android:textColor="@color/main_bg_color"
                android:textSize="@dimen/hrm_measurement_heart_rate_unit_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/center_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/hrm_sensor_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/hrm_sensor_location"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/main_bg_color"
                android:textSize="@dimen/hrm_measurement_body_sensor_textsize" />

            <TextView
                android:id="@+id/hrm_sensor_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/main_bg_color"
                android:textSize="@dimen/hrm_measurement_body_sensor_textsize"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/image_hrm_ee_icon"
                    android:src="@drawable/flame" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/heart_rate_ee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="end"
                        android:padding="10dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/main_bg_color"
                        android:textSize="@dimen/hrm_measurement_body_sensor_textsize"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="start"
                        android:padding="10dp"
                        android:text="@string/hrm_ee_unit"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/main_bg_color"
                        android:textSize="@dimen/hrm_measurement_heart_rate_unit_size" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/hrm_ee_text"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/main_bg_color"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/image_hrm_rr_icon"
                    android:src="@drawable/hand_icon" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/heart_rate_rr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="end"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/main_bg_color"
                        android:textSize="@dimen/hrm_measurement_body_sensor_textsize"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="start"
                        android:padding="10dp"
                        android:text="@string/hrm_rr_unit"
                        android:textColor="@color/main_bg_color"
                        android:textSize="@dimen/hrm_measurement_heart_rate_unit_size" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/hrm_rr_unit_text"
                    android:textColor="@color/main_bg_color"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>